applications/prometheus/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
      operator.prometheus.io/name: prometheus
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: monitoring.otelcol-gateway
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grafana
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
              app.kubernetes.io/instance: grafana
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: otel-external
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: otel-external.otelcol-external
      ports:
        - port: 9090
          protocol: TCP
